resources/5-static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temuragi-static
  namespace: temuragi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: temuragi-static
  template:
    metadata:
      labels:
        app: temuragi-static
    spec:
      containers:
      - name: static
        image: watkinslabs/temuragi_static:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
