resources/5-static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temuragi-static
  namespace: temuragi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: temuragi-static
