resources/6-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temuragi-backend
  namespace: temuragi
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: temuragi-backend
